[package]
name = "rust-url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
redis = { version = "1.2.2", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"
uuid = { version = "1.23.2", features = ["v4"] }
